doc - Verbesserter funktionstest.

--- a/BA_argo_doc/anforderungen.tex
+++ b/BA_argo_doc/anforderungen.tex
@@ -97,21 +97,30 @@ Um die Darstellung zu vereinfachen und die Kommunikation mit der Datenbank zu be
         & Die Positionsdaten einer Messung zum Zeitpunkt der Übetragung der Werte
         & <float64>
         \\\hline
-        
     PRES
         & Messvektor des Wasserdrucks
         & <float32>
         \\\hline
-        
     TEMP
         & Messvektor der Wassertemperaturen 
         & <float32>
           \\\hline
-        
     PSAL
         & Messvektoren des Salzgehaltes
         & <float32>
          \\\hline
+    FLOAT\_OWNER
+        & Besitzer der Messboje
+        & <string64>
+        \\\hline
+    LAUNCH\_DATE
+        & Aussetzdatum
+        & <date\_time>
+        \\\hline
+    PROJECT\_NAME
+        & Federführendes Forschungsprojekt
+        & <string8>
+        \\\hline
     \end{tabular}
       \caption{Beschreibung der ausgewählten Daten}
       \label{table:Datenauswahl}
