--- a/BA_argo_doc/bib.bib
+++ b/BA_argo_doc/bib.bib
@@ -274,7 +274,7 @@ note = {(Accessed on 02/20/2018)}
 author = {Matthias Rauer},
 title = {Quantitative Usablility-Analysen mit der System Usability Scale (SUS)},
 howpublished = {\url{https://blog.seibert-media.net/blog/2011/04/11/usablility-analysen-system-usability-scale-sus/}},
-month = {},
-year = {},
+month = {April},
+year = {2011},
 note = {(Accessed on 03/06/2018)}
 }
