--- a/BA_argo_doc/preamble.tex
+++ b/BA_argo_doc/preamble.tex
@@ -57,6 +57,9 @@ breaklinks=true] {hyperref}
 
 \renewcommand*{\headfont}{\color{xdeepblack}\bfseries} 
 \renewcommand*{\pnumfont}{\normalfont\bfseries}
+\addtokomafont{paragraph}{\normalfont\color{xdeepblack}\bfseries}
+
+
 \addtokomafont{descriptionlabel}{\color{xdeepblack}\normalfont\bfseries}
 
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
