--- a/BA_argo_doc/testphase.tex
+++ b/BA_argo_doc/testphase.tex
@@ -8,9 +8,7 @@ Um die Webapplikation zu testen wurde ein Funktionstest durchgeführt. Dieser um
 
 
 
-
-
-\begin{wrapfigure}[8]{l}{0.4\textwidth}
+\begin{wrapfigure}[9]{l}{0.4\textwidth}
  \centering
  \includegraphics[width=0.39\textwidth]{pix/ftest/001.png}
 
@@ -19,20 +17,19 @@ Um die Webapplikation zu testen wurde ein Funktionstest durchgeführt. Dieser um
 \end{wrapfigure}  
 
 
-Wird die Webpräsenz ArgoData unter ihr zugewiesenen URL aufgerufen, werden die Grenzen der Ozeane und Kontinente über eine Weltkarte dargestellt. Die Karte ist über eine Vektorrepräsentation dargestellt, Landmarker wie Straßen und Städte sind daruf nicht zu erkennen. Die letzte Position der Messstationen ist über die jeweilige Position auf der Karte ersichtlich.
+Wie in Abbildung \ref{fig:ftest001} zu erkennen ist, werden die Grenzen der Ozeane und Kontinente über eine Weltkarte dargestellt, wenn die Webpräsenz der Applikation unter der für ArgoData registrierten Url aufgerufen wird. Die Karte ist über eine Vektorrepräsentation dargestellt, Landmarker wie Straßen und Städte sind darauf nicht zu erkennen. Die letzte Position der Messstationen ist über die jeweilige Position auf der Karte ersichtlich.
 \newline\newline\newline
 
 
 \begin{wrapfigure}[10]{l}{0.4\textwidth}
  \centering
  \includegraphics[width=0.39\textwidth]{pix/ftest/001b.png}
-
  \caption{\textbf{Funktionstest II} Die Anzeige der Hilfe}
  \label{fig:ftest001b}
 \end{wrapfigure} 
 
-Durch Anklicken des Infobuttons erhält der Benutzer über ein modal eine Kurzhilfe angezeigt. Diese erklärt die Grundlegende Funktion der Webseite, stellt Kontaktdaten bereit und stellt über einen Weblink eine Verbindung zum Argo-Programm her.
-\newline\newline\newline\newline
+Durch Anklicken des Infobuttons erhält der Benutzer über ein Modal eine Kurzhilfe angezeigt. Diese erklärt die Grundlegende Funktion der Webseite, stellt Kontaktdaten bereit und stellt über einen Weblink eine Verbindung zum Argo-Programm her. In Abbildung \ref{fig:ftest001b} ist die Webseite mit aktiviertem Modal zu sehen.
+\newline\newline\newline\newline \newpage
 
 
 \begin{wrapfigure}[10]{l}{0.4\textwidth}
@@ -43,7 +40,7 @@ Durch Anklicken des Infobuttons erhält der Benutzer über ein modal eine Kurzhi
  \label{fig:ftest002}
 \end{wrapfigure} 
 
-Wird der Mauszeiger über die Repräsentation einer Messstation geführt, so erscheinen Grundlegende Daten der Argo-Boje. Dies umfasst den eindeutigen Identifier sowie das Datum des letzten Messvorgangs. 
+Wird der Mauszeiger über die Repräsentation einer Messstation geführt, so erscheinen Grundlegende Daten der Argo-Boje. Dies umfasst den eindeutigen Identifier sowie das Datum des letzten Messvorgangs. Zu erkennen in Abbildung \ref{fig:ftest002}.
 \newline\newline\newline\newline\newline
 
 
@@ -55,8 +52,9 @@ Wird der Mauszeiger über die Repräsentation einer Messstation geführt, so ers
  \label{fig:ftest003}
 \end{wrapfigure}
 
-Durch einen Mausklick auf die Kartendarstellung der Argo-Boje werden weiterführende Daten angefordert. Die Messwerte werden über Funktionsplots an der linken Seite der Webseite dargestellt. Dabei sind über die X-Achse der zeitliche Verlauf und über die Y-Achse der jeweilige Messwert kodiert. Die gemessenen Werte umfassen dabei Temperatur, Salzgehalt sowie dem Druck.  Der Ort der Messwerterhebung wird durch einen Punkt auf der Karte repräsentiert. Wird der Mauszeiger über diese Repräsentation geführt, werden neben dem Datum der Messung auch die gemessenen Werte dargestellt.
+Durch einen Mausklick auf die Kartendarstellung der Argo-Boje werden weiterführende Daten angefordert. Wie in Abbildung \ref{fig:ftest003} zu sehen ist, werden  Messwerte  über Funktionsplots an der linken Seite der Webseite dargestellt. Dabei sind über die X-Achse der zeitliche Verlauf und über die Y-Achse der jeweilige Messwert kodiert. Die gemessenen Werte umfassen dabei Temperatur, Salzgehalt sowie dem Druck.  Der Ort der Messwerterhebung wird durch einen Punkt auf der Karte repräsentiert. Wird der Mauszeiger über diese Repräsentation geführt, werden neben dem Datum der Messung auch die gemessenen Werte dargestellt.
 
+\newpage
 
 \begin{wrapfigure}[10]{l}{0.4\textwidth}
  \centering
@@ -66,7 +64,7 @@ Durch einen Mausklick auf die Kartendarstellung der Argo-Boje werden weiterführ
  \label{fig:ftest003b}
 \end{wrapfigure}
 
-Wird der Reiter Info angeklickt, so werden weitere Informationen zur Messstation sichtbar. Diese Umfassen den Identifier der Messstation, das verantwortliche Forschungsprojekt, den Besitzer der Boje sowie das Startdatum und das Datum der letzten Messung.
+Wird der Reiter "`Info"' angeklickt, so werden weitere Informationen zur Messstation sichtbar. Wie in Abbildung \ref{fig:ftest003b} zu sehen ist,  Umfassen diese den Identifier der Messstation, das verantwortliche Forschungsprojekt, den Besitzer der Boje sowie das Startdatum und das Datum der letzten Messung.
 \newline\newline\newline\newline
 \newline\newline\newline
 
@@ -79,7 +77,7 @@ Wird der Reiter Info angeklickt, so werden weitere Informationen zur Messstation
  \label{fig:ftest004}
 \end{wrapfigure}
 
-Zwischen zwei Messpunkten wird der zurückgelegte Weg über eine Linie dargestellt. Somit kann der Weg den eine Messstation zurückgelegt hat, um die Daten zu erheben klar nachvollzogen werden.
+Wie in Abbildung \ref{fig:ftest004} zu erkennen ist, werden zwischen zwei Messpunkten der zurückgelegte Weg über eine Linie dargestellt. Somit kann der Weg den eine Messstation zurückgelegt hat, um die Daten zu erheben klar nachvollzogen werden.
 \newline\newline\newline\newline
 \newline\newline\newline
 
@@ -92,7 +90,7 @@ Zwischen zwei Messpunkten wird der zurückgelegte Weg über eine Linie dargestel
  \label{fig:ftest00fail}
 \end{wrapfigure}
 
-Fehlerhafte Daten werden durch eine Markierung hervorgehoben. Dafür wird eine Warnung ausgegeben, die den Benutzer informiert, dass die Daten, die gerade angezeigt werden, zum Teil die Wertebereiche überschritten haben. Die Achsen der Funktionsplots werden auf die Wertebereiche beschränkt und Plots von mit nan kodierten Messwerten nicht dargestellt.
+In Abbildung \ref{fig:ftest00fail} ist ersichtlich, dass fehlerhafte Daten durch eine Warnung hervorgehoben werden. Diese informiert die Benutzenden, dass die Daten, die gerade angezeigt werden, zum Teil die Wertebereiche überschritten haben. Die Achsen der Funktionsplots werden auf die Wertebereiche beschränkt und Plots von mit \texttt{nan} kodierten Messwerten nicht dargestellt.
 \newline
 \newline
 
@@ -147,8 +145,10 @@ So long and thanks for all the fish. Bye.
 \newpage
 \subsection{Usability-Umfrage}
 
+\subsubsection{Testaufbau}
+
 Um die Usability der Webapplikation zu testen, wurde eine Umfrage durchgeführt. Als Grundlage diente der System Usability Scale (SUS). 
-Für diese Umfrage waren insgesamt 10 Fragen innerhalb einer Scala von 0 (gar nicht) bis 5 (sehr)  zu bewerten. (vgl. Quantita52:online)
+Für diese Umfrage waren insgesamt 10 Fragen innerhalb einer Scala von 0 (gar nicht) bis 5 (sehr)  zu bewerten. (vgl. \cite{Quantita52:online})
 
 An der Umfrage nahmen insgesamt 12 Personen teil. Diese setzen sich aus Bekannten- und Kollegenkreis zusammen. Die Daten wurden anonym erhoben, ein Rückschluss auf die Personen ist damit nicht mehr möglich.
 
@@ -159,7 +159,7 @@ ist eine grafische Zusammenfassung der Ergebnisse zu sehen. In dieser findet sic
  \item [Box]
     Dies markiert den Bereich in welchem sich 50\% der Daten finden. Der Median wird durch eine vertikale Linie gezeigt. Die hier vorliegende Darstellung ist um den Mittelwert (mean) erweitert. Die schmale Linie stellt den mean und die fette den Median dar.
  \item [Whisker (Antennen)]
-    Dieser Bereich stellt die äußeren Quantile dar. In der Grundeinstellung (1.5) umfasst der Wertebereich der Whiskers dabei 75\% der gesamten Daten. 
+    Dieser Bereich stellt die äußeren Quantile dar. In der Grundeinstellung 1.5 wird die von John W. Turkey verwendete Einstellung von maximal dem 1.5-Fachen des Interquartilabstandes für den Whiskerbereich verwendet.
 \end{description}
 
 
@@ -169,10 +169,10 @@ Im Folgenden findet sich eine detaillierte Auswertung der hier erhobenen Daten:
 
 
 \paragraph{Ich kann mir gut vorstellen, ArgoData regelmäßig zu nutzen}
-    Diese Frage zielt auf die Wiederbesuchsbereitschaft ab. Die Antworten sind hier sehr breit gestreut. In insgesamt 4 von 5 Antwortmöglichkeiten wurden Antworten gegeben. Das Maximum lag mit 4 Antworten in der Antwort 4. Der gesamte Antwortbereich wird von den Whiskers markiert. Die Box streckt sich von 2 bis 4. Der Median liegt bei 3, der Durchschnitt zwischen 2.5 und 3.
+    Diese Frage zielt auf die Wiederbesuchsbereitschaft ab. Die Antworten sind hier sehr breit gestreut. In insgesamt 4 von 5 Antwortmöglichkeiten wurden Antworten gegeben. Das Maximum lag mit 4 Antworten in der Antwort 4. Der Median liegt bei 3, der Durchschnitt zwischen 2.5 und 3. Die Box umfasst die Antworten 2 bis 4. Der Whisker schließt Antwort 1 mit ein.
  
  \paragraph{Ich empfinde ArgoData als unnötig komplex.}
-    In dieser Frage, bildet sich die Reduktion der Komplexität ab. Dire Antworten finden sich hier im bereich 1 bis 3. Das Maximum liegt in der Antwort 1. Der Median liegt bei 1, das arithmetische Mittel bei knapp über 1.5. Die Box umfasst die Antworten 1 bis 2. Der Whisker schließt Antwort 3 mit ein.
+    In dieser Frage, bildet sich die Reduktion der Komplexität ab. Dire Antworten finden sich hier im bereich 1 bis 3. Das Maximum liegt mit einem Wert von 7 in der Antwort 1. Der Median liegt bei 1, das arithmetische Mittel bei knapp über 1.5. Die Box umfasst die Antworten 1 bis 2. Der Whisker schließt Antwort 3 mit ein.
     
   \paragraph{Ich empfinde ArgoData als einfach zu nutzen.}
     Durch diese Frage wird die Einfachheit der Darstellung und die Reduktion der Benutzungskomplexität abgebildet. Die Antworten finden sich hier im Bereich 3 bis 5. Das Maximum liegt mit 6 Antworten klar bei Antwort 5. Die Box umfasst Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
@@ -180,8 +180,8 @@ Im Folgenden findet sich eine detaillierte Auswertung der hier erhobenen Daten:
 \paragraph{Ich denke, dass ich Hilfestellung bei der Benutzung brauchen würde\newline um ArgoData zu benutzen.}
     Diese Frage ermittelt ob genügend Hilfestellung zur Verfügung gestellt wurde.  Die Antworten finden sich im Bereich 1 bis 4. Das Maximum von 4 findet sich in den Antworten 1 und 3.  Der Median liegt bei 2.5, das arithmetische Mittel liegt zwischen 2.5 und 2. Die Box umfasst Antworten 1 bis 3, der Whisker schließt Antwort 4 mit ein.
 
-\paragraph{Ich finde, dass die Funktionen (Karte, Steuerung, Anzeige von Daten) gut integriert sind}. 
-    Diese Frage ermittelt die Integration der Steuerungselemente. Hier finden sich die Antworten zwischen 3 und 5. Das Maximum liegt mit 6 bei Antwort 4. Der Median liegt bei 4, das arithmetische Mittel zwischen 4 und 4.5. Die Box umfasst  die Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
+\paragraph{Ich finde, dass die Funktionen (Karte, Steuerung, Anzeige von Daten) gut integriert sind.}
+    Diese Frage ermittelt die Integration der Steuerungselemente. Hier finden sich die Antworten zwischen 3 und 5. Das Maximum liegt mit einem Wert von 6 bei Antwort 4. Der Median liegt bei 4, das arithmetische Mittel zwischen 4 und 4.5. Die Box umfasst  die Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
     
 \paragraph{Ich finde, dass es in ArgoData zu viele Inkonsistenzen gibt.}
     Diese Frage zielt auf die Integration der Komponenten als Gesamtkonzept ab. Die Antworten finden sich von 1 bis 3. Das Maximum liegt mit 5 bei Antwort 2. Der Median liegt bei 2, das arithmetische Mittel liegt leicht darüber. Die Box umfasst Antworten 2 und 3. Der Whisker schließt Antwort 1 mit ein.
@@ -189,11 +189,11 @@ Im Folgenden findet sich eine detaillierte Auswertung der hier erhobenen Daten:
 \paragraph{Ich kann mir vorstellen, dass die meisten Leute ArgoData schnell zu beherrschen lernen} 
     Diese Frage versucht über eine extrene Perspektive die Lernkurve bei der Benutzung abzufragen. Die Antworten finden sich im Bereich 3 bis 5. Das Maximum liegt mit 6 bei Antwort 5. Der Median liegt bei 4.5, das arithmetische Mittel liegt knapp darunter. Die Box umfasst die Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
 
-\paragraph{Ich empfinde die Bedienung als sehr umständlich}
+\paragraph{Ich empfinde die Bedienung als sehr umständlich.}
     Diese Frage versucht das Erleben des Bedienungskonzeptes zu erfragen. Die Antworten finden sich im Bereich 1 bis 3. Das Maximum liegt mit 7 bei Antwort 2. Der Median liegt bei 2, das arithmetische Mittel im Bereich zwischen 1.5 und 2. Die Box umfasst die Antworten 1 und 2. Der Whisker schließt Antwort 3 mit ein.
     
-\paragraph{Ich musste eine Menge Dinge lernen, bevor ich mit ArgoData arbeiten konnte}
-    Diese Frage ermittelt die Lernkurve die zur Benutzung notwendig ist. Hier finden sich die Antworten im Bereich von 1 bis 4. Das Maximum liegt mit 9 Antworten bei Antwort 1. Der Median liegt bei Antwort 1, das arithmetische Mittel bei ca. 1.5. Die Box umfasst Antwort 1, der Whisker schließt keine weiteren Antworten mit ein, diese sind damit als Ausreißer zu betrachten. 
+\paragraph{Ich musste eine Menge Dinge lernen, bevor ich mit ArgoData arbeiten konnte.}
+    Diese Frage ermittelt die Lernkurve die zur Benutzung notwendig ist. Hier finden sich die Antworten im Bereich von 1 bis 4. Das Maximum liegt mit 9 von 12 Antworten bei 1. Der Median liegt bei Antwort 1, das arithmetische Mittel bei ca. 1.5. Die Box umfasst Antwort 1, der Whisker schließt keine weiteren Antworten mit ein, diese sind damit als Ausreißer zu betrachten. 
     
 \subsubsection{Meditation}
 Die Antworten sind durchwegs als positiv zu betrachten. Die Fragen zur Komplexität lassen erkennen, dass es gelungen ist, die wissenschaftlichen Daten ohne Vorkenntnisse verstehbar darzustellen. Die Bedienungsmuster wurden angenommen und als konsistent und wenig umständlich beschrieben. Die Frage zur Wiederbesuchsbereitschaft weist eine starke Streuung auf. Da es sich um eine Seite mit einem Bildungsangebot handelt, ist dies erklärbar.
