--- a/BA_argo_doc/titlepage.tex
+++ b/BA_argo_doc/titlepage.tex
@@ -45,7 +45,7 @@ An dieser Stelle möchte ich  meiner Betreuerin Frau Prof. Dr. Christin Schmidt 
 
 Allen Teilnehmern an der Usability-Umfrage möchte ich ebenso meinen Dank aussprechen.
 
-Außerdem möchte ich auch  meinen Eltern danken. Auch wenn diese heute nicht mehr unter uns sind, so waren sie es doch, die den Keim gelegt haben, der mich dazu befähigte den Weg bis zu dieser Stelle zu gehen.
+Außerdem möchte ich auch  meinen Eltern danken. Auch wenn diese heute nicht mehr unter uns sind, so waren sie es doch, die den Keim gelegt haben, der mich dazu befähigte, den Weg bis zu dieser Stelle zu gehen.
 
 Meine Freundin begleitete mich auf dem Weg dieser Ausarbeitung und stand mir stets mit Rat und Tat zur Seite. Da diese in ganz besonderer Weise an dieser ereignisreichen Zeit teilhaben durfte, ist ihr ganz besonders zu danken.
 
