doc - Bessere Seiteneinteilung

--- a/BA_argo_doc/anforderungen.tex
+++ b/BA_argo_doc/anforderungen.tex
@@ -29,7 +29,7 @@
     \end{figure}
 
 % END
-
+\pagebreak
 % BEGIN Beschreibung  funktionale Anforderungen
     \subsection{Funktionale Anforderungen}
 
