--- a/BA_argo_doc/einleitung.tex
+++ b/BA_argo_doc/einleitung.tex
@@ -29,7 +29,7 @@ Um die Qualität der Software beschreiben zu können, folgt im darauf folgenden 
 Im Abschluss findet eine Präsentation des entwickelten Prototypen statt. Dabei wird ein möglichst kritischer Blick auf Problemstellung und Lösungen geworfen. Abschließend wird ein Ausblick auf Alternativen und mögliche Weiterentwicklungen der Prototypen gegeben.
 
 
-
+\pagebreak
 \subsection{Existierende Lösungen}
 
 
