--- a/BA_argo_doc/grundlagen.tex
+++ b/BA_argo_doc/grundlagen.tex
@@ -138,6 +138,7 @@ Im UTM-System wird ein analoges Verfahren angewendet. Die Meridianstreifen haben
 % END
 
 % BEGIN -- Software
+\pagebreak
     \subsection{Network Common Data Format}
 
     Das Network Common Data Format (netCDF) dient zum Austausch von wissenschaftlichen Daten. Es ist eine Weiterentwicklung des von der NASA entwickelten Common Data Formats (CDF). Das Datenformat zeichnet sich dadurch aus, dass es selbstbeschreibend ist. Die Dokumentation ist Teil des Datensatzes und wird so immer  mitgeführt. Dies soll die Portabilität des Datensatzes verbessern.  (vgl. \cite{FisherNetCDF})
