--- a/BA_argo_doc/systementwurf.tex
+++ b/BA_argo_doc/systementwurf.tex
@@ -47,6 +47,7 @@ Als zweite Ebene der Aggregation ist der Prozess des Schreibens in eine Datenban
 
 Es ist an dieser Stelle zu erkennen, dass zwei Stellen existieren, die die intrinsischen Eigenschaften des Modules an dieser Stelle beeinflussen. Im folgenden werden die Schnittstellen aufgelistet, die eine richtige Handhabung festsetzen:
 
+\pagebreak
 \paragraph{Schnittstellen}
 
 \begin{enumerate}
@@ -124,7 +125,7 @@ Die \textbf{app} liefert die Teile aus, die vom Benutzer gesehen werden. Es hand
 
 
 % END
-
+\pagebreak
 % BEGIN DESIGN DARSTELLUNG
 \subsubsection{Aussehen der Webapplikation}
 %
